[package]
name = "arise"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive"] }
crossterm = "0.28.1"
once_cell = "1.20.3"
rand = "0.9.0"
ratatui = "0.29.0"
serde = { version = "1.0.218", features = ["derive", "serde_derive"] }
serde_json = "1.0.139"
